plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.diffplug.spotless' version '8.4.0'
}

repositories {
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Gson for JSON serialization/deserialization
    implementation 'com.google.code.gson:gson:2.10.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25.0.2'
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.media' ]
}

application {
    mainClass = 'parcelpanic.App'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics,javafx.media']
}

spotless {
    java {
        googleJavaFormat('1.35.0')
        target 'src/*/java/**/*.java'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('runServer', JavaExec) {
    group = 'application'
    description = 'Runs the authoritative Game Server'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'parcelpanic.net.GameServer'
}
